[gd_scene load_steps=15 format=2]

[ext_resource path="res://Objects/Explosion/explosion3.png" type="Texture" id=1]
[ext_resource path="res://Objects/Explosion/explosion2.png" type="Texture" id=2]
[ext_resource path="res://Objects/Explosion/explosion1.png" type="Texture" id=3]
[ext_resource path="res://Objects/Explosion/explosion5.png" type="Texture" id=4]
[ext_resource path="res://Objects/NPC/tanknpc.gd" type="Script" id=5]
[ext_resource path="res://Images/tank_bigRed.png" type="Texture" id=6]
[ext_resource path="res://Objects/Explosion/explosion4.png" type="Texture" id=7]
[ext_resource path="res://Sounds/wot_mid (mp3cut.net).wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/tank-unichtozhen.wav" type="AudioStream" id=10]

[sub_resource type="Shader" id=5]
code = " shader_type canvas_item;

uniform bool grayscale = false;


void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	if (grayscale) { 
		COLOR.rbg = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 5 )
shader_param/grayscale = false

[sub_resource type="CircleShape2D" id=3]
radius = 30.8294

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": false,
"name": "boom",
"speed": 12.0
} ]

[node name="tanknpc" type="KinematicBody2D" groups=["enemy", "minimap_objects"]]
position = Vector2( 6.74493, -1.12247 )
script = ExtResource( 5 )

[node name="tank_npc" type="Sprite" parent="."]
material = SubResource( 2 )
rotation = 3.14159
scale = Vector2( 0.970018, 1.02142 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( -9.5, -40.75 )

[node name="Position2D2" type="Position2D" parent="."]
visible = false
position = Vector2( 10, -40.75 )

[node name="Node2D" type="Node2D" parent="."]

[node name="hpbar" type="ProgressBar" parent="Node2D"]
margin_left = -32.0
margin_top = -60.0
margin_right = 38.0
margin_bottom = -45.0

[node name="reloadprogress" type="ProgressBar" parent="Node2D"]
margin_left = -32.0
margin_top = -45.0
margin_right = 38.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1.58103e-07, 13.2582 )
rotation = 4.71239
scale = Vector2( 1.04544, 1 )
polygon = PoolVector2Array( -41.9045, 51.4581, 58.4821, 51.4581, 193.33, 394.57, -134.8, 391.574 )

[node name="boom_player" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
animation = "boom"

[node name="rrrrr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="ooooo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="uiuiui" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="boom_player" to="." method="_on_boom_player_animation_finished"]
